[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/art/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.36499, -0.607498, 0, 0, 0, 0, 480.36, -0.901291, 0, 0, 0, 0, 479.765, 720.49, 0, 0, 0, 0, -0.36499, 720.49, 0, 0, 0, 0, -0.36499, -0.607498 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -4.0
margin_top = -5.0
margin_right = 485.0
margin_bottom = 727.0
color = Color( 0.823529, 0.568627, 0.737255, 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ExtraLifeTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="MobSpawner" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobSpawner"]
position = Vector2( -0.36499, -0.607498 )
rotation = -0.000611158

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Defeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="immune" from="Player" to="." method="_on_Player_immune"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ExtraLifeTimer" to="." method="_on_ExtraLifeTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
